4 May 2004 Sylvain Pion
- Add dummy symbol in src/Geomview.C to prevent linker warnings of empty
  object file (ICL).

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

31 Jan 2004  Sylvain Pion
- Use CGAL_USE_GEOMVIEW

Ver 3.41 (21 October 2003)
- fix headers

Ver 3.40 (1 October 2003) [af]
- Moved \chapter to main.tex

Ver 3.39 (22 September 2003)
- new headers.

Ver 3.38 (12 April 2003)
- Replace <strstream> by <sstream>.

Ver 3.37 (14 January 2003)
- Workaronund for MINGW compiler.
  Geomview_stream.C should not be compiled on Windows. 

Ver 3.36 (8 January 2003)
- Workaround for SunPRO.

Ver 3.35 (20 December 2002)
- Make draw_triangles() only require an InputIterator, not a ForwardIterator.

Ver 3.34 (20 December 2002)
- Add operator<<(long) and operator<<(unsigned long) (needed for MipsPro 64).

Ver 3.33 (11 December 2002)
- Add gv.draw_triangles(InputIterator begin, end) using OFF to be fast.

Ver 3.32 (29 April 2002)
- split of reference and user manual

Ver 3.31 (24 April 2002)
- doc fix (Susan)

Ver 3.30 (11 April 2002)
- doc fixes

Ver 3.29 (11 April 2002)
- doc fixes

Ver 3.28 (10 April 2002)
- Split the maunal into user and reference manual

Ver 3.27 (17 October 2001)
- Don't compile src/Geomview_stream.C on __MWERKS__ (CodeWarrior).

Ver 3.26 (25 September 2001)
- Don't compile the test program on windows.

Ver 3.25 (22 September 2001)
- Fix private/public buglet just introduced.

Ver 3.24 (21 September 2001)
- SunPro workaround.

Ver 3.23 (20 September 2001)
- Move code dependent on non-standard <strstream> to src/Geomview_stream.C
  to avoid warnings.

Ver 3.22 (15 August 2001)
- Removed a "const" for SunPro.

Ver 3.21 (15 August 2001)
- Add missing #includes for SunPro.

=========================== CGAL 2.3 ============================

Ver 3.20 (10 July 2001)
- Submission bug.

Ver 3.19 (10 July 2001)
- Remove warning with GCC 3.0.
- Update demo code to match new include rules.

Ver 3.18 (19 June 2001)