@@ -1,3 +1,6 @@
+17 September 2004 Sylvain Pion
+- Remove "missing sentinel" warning with g++ 4.0.0.
+
 4 May 2004 Sylvain Pion
 - Add dummy symbol in src/Geomview.C to prevent linker warnings of empty
   object file (ICL).
